# flutter_miniaudio

./: CHANGELOG.md  README.md  README_CN.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: LICENSE  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/miniaudio_ffi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  wiring_demo.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_miniaudio.podspec
lib/: flutter_miniaudio.dart  miniaudio_ffi_bindings_generated.dart
lib/src/: miniaudio_bindings.dart  miniaudio_player.dart
linux/: CMakeLists.txt
macos/: flutter_miniaudio.podspec
macos/Classes/: miniaudio_ffi.c
src/: CMakeLists.txt  miniaudio_bridge.c  miniaudio_bridge.h  miniaudio_ffi.c
windows/: CMakeLists.txt
